[package]
name = "sms-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
chrono = "0.4.39"
configparser = "3.1.0"
crossterm = "0.28.1"
homedir = "0.3.4"
log = "0.4.25"
ngrok = { version = "0.13.1", features = ["axum"] }
ratatui = "0.29.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.135"
simple-logging = "2.0.2"
tokio = { version = "1", features = ["full"] }
